--- a/ansible/install_applications/vars/auth-openldap.yml
+++ b/ansible/install_applications/vars/auth-openldap.yml
@@ -16,6 +16,18 @@ openldap:
   namespace: "{{ _openldap_var_loader.namespace }}"
   base_image: "{{ _openldap_var_loader.base_image }}"
   
+  app_backup:
+    name: auth-openldap
+    repository: "{{ restic_apps_backup_repository }}"
+    apps_to_stop:
+    - name: openldap
+      namespace: "{{ _openldap_var_loader.namespace }}"
+      type: statefulset
+      replicas: 1
+    gluster_volumes:
+    - openldap-data
+    - openldap-config
+  
   labels_def:
     app.kubernetes.io/name: openldap
     app.kubernetes.io/component: openldap
