--- a/ansible/install_applications/roles/dev-gitlab.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/tasks/main.yml
@@ -5,6 +5,12 @@
   vars:
     application_namespace: "{{ gitlab.namespace }}"
 
+- name: Deploy Gitlab backup script
+  import_tasks: ../../_base.deploy/tasks/backup.yml
+  vars:
+    app_backup: "{{ gitlab.app_backup }}"
+  tags: backup
+
 - name: Ensure Gitlab image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
   vars:
