--- a/ansible/install_applications/roles/download-sickchill.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/download-sickchill.deploy/tasks/main.yml
@@ -6,6 +6,12 @@
     application_namespace: "{{ sickchill.namespace }}"
     create_nfs_pvc: yes
 
+- name: Deploy Sickchill backup script
+  import_tasks: ../../_base.deploy/tasks/backup.yml
+  vars:
+    app_backup: "{{ sickchill.app_backup }}"
+  tags: backup
+
 - name: Ensure BusyBox image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
   vars:
