--- a/ansible/install_applications/roles/infra-pihole.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/infra-pihole.deploy/tasks/main.yml
@@ -5,6 +5,12 @@
   vars:
     application_namespace: "{{ pihole.namespace }}"
 
+- name: Deploy PiHole backup script
+  import_tasks: ../../_base.deploy/tasks/backup.yml
+  vars:
+    app_backup: "{{ pihole.app_backup }}"
+  tags: backup
+
 - name: Ensure PiHole image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
   vars:
