--- a/ansible/install_applications/vars/download-pyload.yml
+++ b/ansible/install_applications/vars/download-pyload.yml
@@ -2,6 +2,7 @@
 
 # To avoid loops inside pyload
 _pyload_var_loader:
+  namespace: "download-pyload"
   base_image:
     name: "python"
     tag: "2.7.18-alpine3.11"
@@ -13,9 +14,20 @@ _pyload_var_loader:
 pyload:
   enabled: "{{ pyload_enabled | default(True) }}"
 
-  namespace: "download-pyload"
+  namespace: "{{ _pyload_var_loader.namespace }}"
   base_image: "{{ _pyload_var_loader.base_image }}"
   repo: "{{ _pyload_var_loader.repo }}"
+
+  app_backup:
+    name: download-pyload
+    repository: "{{ restic_apps_backup_repository }}"
+    apps_to_stop:
+    - name: pyload
+      namespace: "{{ _pyload_var_loader.namespace }}"
+      type: statefulset
+      replicas: 1
+    gluster_volumes:
+    - pyload-config
 
   labels_def:
     app.kubernetes.io/name: pyload
