--- a/ansible/install_applications/vars/download-sabnzbd.yml
+++ b/ansible/install_applications/vars/download-sabnzbd.yml
@@ -17,6 +17,17 @@ sabnzbd:
   base_image: "{{ _sabnzbd_var_loader.base_image }}"
   repo: "{{ _sabnzbd_var_loader.repo }}"
   servername: "sabnzbd.{{ _sabnzbd_var_loader.namespace }}.svc.cluster.local"
+
+  app_backup:
+    name: download-sabnzbd
+    repository: "{{ restic_apps_backup_repository }}"
+    apps_to_stop:
+    - name: sabnzbd
+      namespace: "{{ _sabnzbd_var_loader.namespace }}"
+      type: statefulset
+      replicas: 1
+    gluster_volumes:
+    - sabnzbd-config
   
   labels_def:
     app.kubernetes.io/name: sabnzbd
