--- a/ansible/install_applications/vars/home-homeassistant.yml
+++ b/ansible/install_applications/vars/home-homeassistant.yml
@@ -13,6 +13,17 @@ homeassistant:
   namespace: "{{ _homeassistant_var_loader.namespace }}"
   base_image: "{{ _homeassistant_var_loader.base_image }}"
   servername: "homeassistant.{{ _homeassistant_var_loader.namespace }}.svc.cluster.local"
+
+  app_backup:
+    name: home-homeassistant
+    repository: "{{ restic_apps_backup_repository }}"
+    apps_to_stop:
+    - name: homeassistant
+      namespace: "{{ _homeassistant_var_loader.namespace }}"
+      type: statefulset
+      replicas: 1
+    gluster_volumes:
+    - homeassistant-config
   
   labels_def:
     app.kubernetes.io/name: homeassistant
@@ -67,6 +78,17 @@ _homeassistant_mysql_var_loader:
 
 homeassistant_mysql:
   base_image: "{{ _homeassistant_mysql_var_loader.base_image }}"
+
+  app_backup:
+    name: home-homeassistant_mysql
+    repository: "{{ restic_apps_backup_repository }}"
+    apps_to_stop:
+    - name: homeassistant-mysql
+      namespace: "{{ _homeassistant_var_loader.namespace }}"
+      type: statefulset
+      replicas: 1
+    gluster_volumes:
+    - homeassistant-mysql
   
   labels_def:
     app.kubernetes.io/name: homeassistant
