--- a/ansible/install_applications/vars/infra-gotify.yml
+++ b/ansible/install_applications/vars/infra-gotify.yml
@@ -13,8 +13,19 @@ gotify:
   namespace: "{{ _gotify_var_loader.namespace }}"
   base_image: "{{ _gotify_var_loader.base_image }}"
   servername: "gotify.{{ _gotify_var_loader.namespace }}.svc.cluster.local"
-  
-  labels_def:
+
+  app_backup:
+    name: infra-gotify
+    repository: "{{ restic_apps_backup_repository }}"
+    apps_to_stop:
+    - name: gotify
+      namespace: "{{ _gotify_var_loader.namespace }}"
+      type: statefulset
+      replicas: 1
+    gluster_volumes:
+    - gotify-data
+    
+    labels_def:
     app.kubernetes.io/name: gotify
     app.kubernetes.io/component: gotify
 
