Install restic from binary releases

--- a/ansible/install_infra/roles/restic/defaults/main.yml
+++ b/ansible/install_infra/roles/restic/defaults/main.yml
@@ -1,7 +1,9 @@
 ---
 
+restic_version: "0.12.0"
 restic_backup_scripts_dir: /opt/backup
 restic_backup_apps_scripts_dir: "{{ restic_backup_scripts_dir }}/apps.d"
+restic_bash_completion_enabled: True
 
 restic_host_backup_repository:
   name: host_backup
