--- a/ansible/install_infra/roles/restic/defaults/main.yml
+++ b/ansible/install_infra/roles/restic/defaults/main.yml
@@ -5,6 +5,33 @@ restic_backup_scripts_dir: /opt/backup
 restic_backup_apps_scripts_dir: "{{ restic_backup_scripts_dir }}/apps.d"
 restic_bash_completion_enabled: True
 
+restic_backup_host_enabled: True
+restic_backup_apps_enabled: False
+restic_backup_maintenance_enabled: False
+schedule_with_cron: True
+
+restic_backup_hosts_cron:
+  minute: "0"
+  hour: "2"
+  day: "*"
+  weekday: "*"
+  month: "*"
+
+restic_backup_apps_cron:
+  minute: "0"
+  hour: "3"
+  day: "*"
+  weekday: "*"
+  month: "*"
+
+restic_backup_maintenance_cron:
+  minute: "0"
+  hour: "8"
+  day: "*"
+  weekday: "1"
+  month: "*"
+
+
 restic_host_backup_repository:
   name: host_backup
   enabled: False
