--- a/ansible/install_infra/roles/backup-core/meta/main.yml
+++ b/ansible/install_infra/roles/backup-core/meta/main.yml
@@ -3,7 +3,7 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Install Restic"
+  description: "Deploy core backup scripts"
   min_ansible_version: 2.7
   platforms:
   - name: Debian
