--- a/ansible/install_infra/roles/backup-restic/defaults/main.yml
+++ b/ansible/install_infra/roles/backup-restic/defaults/main.yml
@@ -1,7 +1,8 @@
 ---
 
 restic_version: "0.12.0"
-restic_backup_scripts_dir: /opt/backup
+backup_scripts_dir: /opt/backups
+restic_backup_scripts_dir: "{{ backup_scripts_dir }}"
 restic_backup_apps_scripts_dir: "{{ restic_backup_scripts_dir }}/apps.d"
 restic_bash_completion_enabled: True
 
