Move backups to a dedicated group

--- a/ansible/install_infra/site.yml
+++ b/ansible/install_infra/site.yml
@@ -8,6 +8,10 @@
     - firewall
     - usb-serial
     - monitoring-textfile-collectors
+
+- name: Configure backups
+  hosts: backups
+  roles:
     - { role: backup-core, tags: backup }
     - { role: backup-restic, tags: backup }
 
