--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -15,6 +15,12 @@ master-test-2
 master-test-3
 node-test-home
 
+[backups]
+master-test-1
+master-test-2
+master-test-3
+node-test-home
+
 [dns_servers]
 master-test-1
 master-test-2
