--- a/ansible/install_infra/roles/backup-core/tasks/main.yml
+++ b/ansible/install_infra/roles/backup-core/tasks/main.yml
@@ -5,3 +5,11 @@
     path: "{{ backup_scripts_dir }}"
     state: directory
     mode: 0700
+
+- name: Deploy core backup scripts
+  template:
+    src: "{{ item }}.j2"
+    dest: "{{ restic_backup_scripts_dir }}/{{ item }}"
+    mode: 0700
+  loop:
+    - "_prometheus.sh"
