--- a/ansible/install_infra/site.yml
+++ b/ansible/install_infra/site.yml
@@ -15,6 +15,7 @@
     - { role: backup-core, tags: backup }
     - { role: backup-restic, tags: backup }
     - { role: backup-rsync, tags: backup }
+    - { role: backup-rclone, tags: backup }
 
 - name: Provision APC UPS
   hosts: apcups
