--- a/ansible/install_infra/roles/backup-restic/tasks/install.yml
+++ b/ansible/install_infra/roles/backup-restic/tasks/install.yml
@@ -16,7 +16,7 @@
 - name: Deploy restic
   copy:
     src: "/tmp/restic_{{ restic_version }}_linux_amd64"
-    dest: /usr/local/bin/restic
+    dest: "{{ restic_bin_path }}"
     mode: 755
     remote_src: yes
   become: yes
@@ -27,7 +27,7 @@
     state: absent
 
 - name: Generate temp Restic Bash completion
-  command: restic generate --bash-completion /tmp/bash_completion_restic
+  command: "{{ restic_bin_path }} generate --bash-completion /tmp/bash_completion_restic"
   changed_when: False
   when: restic_bash_completion_enabled
 
