--- a/ansible/install_infra/roles/backup-rclone/tasks/main.yml
+++ b/ansible/install_infra/roles/backup-rclone/tasks/main.yml
@@ -13,14 +13,17 @@
 
 - name: Ensure rclone backup scripts directory exists
   file:
-    path: "{{ rclone_backup_scripts_dir }}"
+    path: "{{ item }}"
     state: directory
     mode: 0700
+  loop:
+    - "{{ rclone_backup_scripts_dir }}"
+    - "{{ rclone_configurations_dir }}"
 
 - name: Deploy rclone configuration
   template:
     src: rclone.conf.j2
-    dest: "{{ rclone_backup_scripts_dir }}/rclone.conf"
+    dest: "{{ rclone_configurations_dir }}/rclone.conf"
     mode: 0600
 
 - name: Search for existing rclone backup scripts
