--- a/ansible/install_infra/roles/backup-restic/tasks/apps.yml
+++ b/ansible/install_infra/roles/backup-restic/tasks/apps.yml
@@ -14,33 +14,41 @@
     mode: 0700
   when: restic_backup_apps_enabled
 
-- name: Ensure Host backup scripts are absent
+- name: Ensure Apps backup scripts are absent
   file:
     path: "{{ restic_backup_scripts_dir }}/restic_backup_apps.sh"
     state: absent
   when: not restic_backup_apps_enabled
 
-- name: Schedule apps backup
-  cron:
-    name: "restic_apps_backup"
-    cron_file: "restic"
-    user: root
-    job: "{{ restic_backup_scripts_dir }}/restic_backup_apps.sh"
-    minute: "{{ restic_backup_apps_cron.minute }}"
-    hour: "{{ restic_backup_apps_cron.hour }}"
-    day: "{{ restic_backup_apps_cron.day }}"
-    weekday: "{{ restic_backup_apps_cron.weekday }}"
-    month: "{{ restic_backup_apps_cron.month }}"
-  when: 
-    - schedule_with_cron
-    - restic_backup_apps_enabled and restic_backup_apps_cron
+- name: Deploy Apps backup systemd unit and timer
+  template:
+    src: "systemd/{{ item }}.j2"
+    dest: "/etc/systemd/system/{{ item }}"
+    mode: 0700
+  loop:
+    - restic_backup_apps.service
+    - restic_backup_apps.timer
+  notify: Reload systemd daemon
+  when:
+    - schedule_with_systemd
+    - restic_backup_apps_enabled and restic_backup_apps_timer
 
-- name: Ensure apps backup is not scheduled
-  cron:
-    name: "restic_apps_backup"
-    cron_file: "restic"
+- name: Enable Apps backup systemd timer
+  systemd:
+    name: restic_backup_apps.timer
+    state: started
+    enabled: yes
+  when:
+    - schedule_with_systemd
+    - restic_backup_apps_enabled and restic_backup_apps_timer
+
+- name: Ensure Apps backup systemd unit and timer are not deployed
+  file:
+    path: "/etc/systemd/system/{{ item }}"
     state: absent
-  when: 
-    - schedule_with_cron
-    - not restic_backup_apps_cron or not restic_backup_apps_cron
-  
+  loop:
+    - restic_backup_apps.service
+    - restic_backup_apps.timer
+  when:
+    - schedule_with_systemd
+    - not restic_backup_apps_enabled or not restic_backup_apps_timer
