--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/k8s.rules.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/k8s.rules.yaml
@@ -2,11 +2,11 @@
   rules:
   - expr: |
       sum by (cluster, namespace, pod, container) (
-        rate(container_cpu_usage_seconds_total{job="kubelet", metrics_path="/metrics/cadvisor", image!=""}[5m])
+        irate(container_cpu_usage_seconds_total{job="kubelet", metrics_path="/metrics/cadvisor", image!=""}[5m])
       ) * on (cluster, namespace, pod) group_left(node) topk by (cluster, namespace, pod) (
         1, max by(cluster, namespace, pod, node) (kube_pod_info{node!=""})
       )
-    record: node_namespace_pod_container:container_cpu_usage_seconds_total:sum_rate
+    record: node_namespace_pod_container:container_cpu_usage_seconds_total:sum_irate
   - expr: |
       container_memory_working_set_bytes{job="kubelet", metrics_path="/metrics/cadvisor", image!=""}
       * on (namespace, pod) group_left(node) topk by(namespace, pod) (1,
@@ -53,6 +53,28 @@
           )
       )
     record: namespace_cpu:kube_pod_container_resource_requests:sum
+  - expr: |
+      sum by (namespace, cluster) (
+          sum by (namespace, pod, cluster) (
+              max by (namespace, pod, container, cluster) (
+                kube_pod_container_resource_limits{resource="memory",job="kube-state-metrics"}
+              ) * on(namespace, pod, cluster) group_left() max by (namespace, pod) (
+                kube_pod_status_phase{phase=~"Pending|Running"} == 1
+              )
+          )
+      )
+    record: namespace_memory:kube_pod_container_resource_limits:sum
+  - expr: |
+      sum by (namespace, cluster) (
+          sum by (namespace, pod, cluster) (
+              max by (namespace, pod, container, cluster) (
+                kube_pod_container_resource_limits{resource="cpu",job="kube-state-metrics"}
+              ) * on(namespace, pod, cluster) group_left() max by (namespace, pod) (
+                kube_pod_status_phase{phase=~"Pending|Running"} == 1
+              )
+          )
+      )
+    record: namespace_cpu:kube_pod_container_resource_limits:sum
   - expr: |
       max by (cluster, namespace, workload, pod) (
         label_replace(
