--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kube-apiserver-burnrate.rules.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kube-apiserver-burnrate.rules.yaml
@@ -1,4 +1,4 @@
-- name: kube-apiserver.rules
+- name: kube-apiserver-burnrate.rules
   rules:
   - expr: |
       (
@@ -301,40 +301,3 @@
     labels:
       verb: write
     record: apiserver_request:burnrate6h
-  - expr: |
-      sum by (cluster,code,resource) (rate(apiserver_request_total{job="apiserver",verb=~"LIST|GET"}[5m]))
-    labels:
-      verb: read
-    record: code_resource:apiserver_request_total:rate5m
-  - expr: |
-      sum by (cluster,code,resource) (rate(apiserver_request_total{job="apiserver",verb=~"POST|PUT|PATCH|DELETE"}[5m]))
-    labels:
-      verb: write
-    record: code_resource:apiserver_request_total:rate5m
-  - expr: |
-      histogram_quantile(0.99, sum by (cluster, le, resource) (rate(apiserver_request_duration_seconds_bucket{job="apiserver",verb=~"LIST|GET"}[5m]))) > 0
-    labels:
-      quantile: '0.99'
-      verb: read
-    record: cluster_quantile:apiserver_request_duration_seconds:histogram_quantile
-  - expr: |
-      histogram_quantile(0.99, sum by (cluster, le, resource) (rate(apiserver_request_duration_seconds_bucket{job="apiserver",verb=~"POST|PUT|PATCH|DELETE"}[5m]))) > 0
-    labels:
-      quantile: '0.99'
-      verb: write
-    record: cluster_quantile:apiserver_request_duration_seconds:histogram_quantile
-  - expr: |
-      histogram_quantile(0.99, sum(rate(apiserver_request_duration_seconds_bucket{job="apiserver",subresource!="log",verb!~"LIST|WATCH|WATCHLIST|DELETECOLLECTION|PROXY|CONNECT"}[5m])) without(instance, pod))
-    labels:
-      quantile: '0.99'
-    record: cluster_quantile:apiserver_request_duration_seconds:histogram_quantile
-  - expr: |
-      histogram_quantile(0.9, sum(rate(apiserver_request_duration_seconds_bucket{job="apiserver",subresource!="log",verb!~"LIST|WATCH|WATCHLIST|DELETECOLLECTION|PROXY|CONNECT"}[5m])) without(instance, pod))
-    labels:
-      quantile: '0.9'
-    record: cluster_quantile:apiserver_request_duration_seconds:histogram_quantile
-  - expr: |
-      histogram_quantile(0.5, sum(rate(apiserver_request_duration_seconds_bucket{job="apiserver",subresource!="log",verb!~"LIST|WATCH|WATCHLIST|DELETECOLLECTION|PROXY|CONNECT"}[5m])) without(instance, pod))
-    labels:
-      quantile: '0.5'
-    record: cluster_quantile:apiserver_request_duration_seconds:histogram_quantile
