--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
@@ -8,6 +8,8 @@
       summary: Pod is crash looping.
     expr: |
       increase(kube_pod_container_status_restarts_total{job="kube-state-metrics"}[10m]) > 0
+      and
+      kube_pod_container_status_waiting{job="kube-state-metrics"} == 1
     for: 15m
     labels:
       severity: warning
@@ -51,7 +53,7 @@
     expr: |
       (
         kube_deployment_spec_replicas{job="kube-state-metrics"}
-          !=
+          >
         kube_deployment_status_replicas_available{job="kube-state-metrics"}
       ) and (
         changes(kube_deployment_status_replicas_updated{job="kube-state-metrics"}[10m])
@@ -213,37 +215,37 @@
       severity: warning
   - alert: KubeHpaReplicasMismatch
     annotations:
-      description: HPA {{ $labels.namespace }}/{{ $labels.hpa }} has not matched the
-        desired number of replicas for longer than 15 minutes.
+      description: HPA {{ $labels.namespace }}/{{ $labels.horizontalpodautoscaler  }}
+        has not matched the desired number of replicas for longer than 15 minutes.
       runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubehpareplicasmismatch
       summary: HPA has not matched descired number of replicas.
     expr: |
-      (kube_hpa_status_desired_replicas{job="kube-state-metrics"}
+      (kube_horizontalpodautoscaler_status_desired_replicas{job="kube-state-metrics"}
         !=
-      kube_hpa_status_current_replicas{job="kube-state-metrics"})
+      kube_horizontalpodautoscaler_status_current_replicas{job="kube-state-metrics"})
         and
-      (kube_hpa_status_current_replicas{job="kube-state-metrics"}
+      (kube_horizontalpodautoscaler_status_current_replicas{job="kube-state-metrics"}
         >
-      kube_hpa_spec_min_replicas{job="kube-state-metrics"})
+      kube_horizontalpodautoscaler_spec_min_replicas{job="kube-state-metrics"})
         and
-      (kube_hpa_status_current_replicas{job="kube-state-metrics"}
+      (kube_horizontalpodautoscaler_status_current_replicas{job="kube-state-metrics"}
         <
-      kube_hpa_spec_max_replicas{job="kube-state-metrics"})
+      kube_horizontalpodautoscaler_spec_max_replicas{job="kube-state-metrics"})
         and
-      changes(kube_hpa_status_current_replicas{job="kube-state-metrics"}[15m]) == 0
+      changes(kube_horizontalpodautoscaler_status_current_replicas{job="kube-state-metrics"}[15m]) == 0
     for: 15m
     labels:
       severity: warning
   - alert: KubeHpaMaxedOut
     annotations:
-      description: HPA {{ $labels.namespace }}/{{ $labels.hpa }} has been running
-        at max replicas for longer than 15 minutes.
+      description: HPA {{ $labels.namespace }}/{{ $labels.horizontalpodautoscaler  }}
+        has been running at max replicas for longer than 15 minutes.
       runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubehpamaxedout
       summary: HPA is running at max replicas
     expr: |
-      kube_hpa_status_current_replicas{job="kube-state-metrics"}
+      kube_horizontalpodautoscaler_status_current_replicas{job="kube-state-metrics"}
         ==
-      kube_hpa_spec_max_replicas{job="kube-state-metrics"}
+      kube_horizontalpodautoscaler_spec_max_replicas{job="kube-state-metrics"}
     for: 15m
     labels:
       severity: warning
