--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -152,6 +152,10 @@
   tags: kubernetes-app-home-openzwave
   when: openzwave_enabled | bool
 
+- import_playbook: app-home-zwavejs2mqtt.yml
+  tags: kubernetes-app-home-zwavejs2mqtt
+  when: zwavejs2mqtt_enabled | bool
+
 - import_playbook: app-home-homeassistant.yml
   tags: kubernetes-app-home-homeassistant
   when: homeassistant_enabled | bool
