--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/alertmanager.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/alertmanager.alerts.yaml
@@ -4,7 +4,7 @@
     annotations:
       description: Configuration has failed to load for {{ $labels.namespace }}/{{
         $labels.pod}}.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/alertmanagerfailedreload
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/alertmanager/alertmanagerfailedreload
       summary: Reloading an Alertmanager configuration has failed.
     expr: |
       # Without max_over_time, failed scrapes could create false negatives, see
@@ -17,7 +17,7 @@
     annotations:
       description: Alertmanager {{ $labels.namespace }}/{{ $labels.pod}} has only
         found {{ $value }} members of the {{$labels.job}} cluster.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/alertmanagermembersinconsistent
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/alertmanager/alertmanagermembersinconsistent
       summary: A member of an Alertmanager cluster has not found all other cluster
         members.
     expr: |
@@ -34,7 +34,7 @@
       description: Alertmanager {{ $labels.namespace }}/{{ $labels.pod}} failed to
         send {{ $value | humanizePercentage }} of notifications to {{ $labels.integration
         }}.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/alertmanagerfailedtosendalerts
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/alertmanager/alertmanagerfailedtosendalerts
       summary: An Alertmanager instance failed to send notifications.
     expr: |
       (
@@ -51,7 +51,7 @@
       description: The minimum notification failure rate to {{ $labels.integration
         }} sent from any instance in the {{$labels.job}} cluster is {{ $value | humanizePercentage
         }}.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/alertmanagerclusterfailedtosendalerts
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/alertmanager/alertmanagerclusterfailedtosendalerts
       summary: All Alertmanager instances in a cluster failed to send notifications
         to a critical integration.
     expr: |
@@ -69,7 +69,7 @@
       description: The minimum notification failure rate to {{ $labels.integration
         }} sent from any instance in the {{$labels.job}} cluster is {{ $value | humanizePercentage
         }}.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/alertmanagerclusterfailedtosendalerts
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/alertmanager/alertmanagerclusterfailedtosendalerts
       summary: All Alertmanager instances in a cluster failed to send notifications
         to a non-critical integration.
     expr: |
@@ -86,7 +86,7 @@
     annotations:
       description: Alertmanager instances within the {{$labels.job}} cluster have
         different configurations.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/alertmanagerconfiginconsistent
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/alertmanager/alertmanagerconfiginconsistent
       summary: Alertmanager instances within the same cluster have different configurations.
     expr: |
       count by (namespace,service) (
@@ -100,7 +100,7 @@
     annotations:
       description: '{{ $value | humanizePercentage }} of Alertmanager instances within
         the {{$labels.job}} cluster have been up for less than half of the last 5m.'
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/alertmanagerclusterdown
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/alertmanager/alertmanagerclusterdown
       summary: Half or more of the Alertmanager instances within the same cluster
         are down.
     expr: |
@@ -121,7 +121,7 @@
     annotations:
       description: '{{ $value | humanizePercentage }} of Alertmanager instances within
         the {{$labels.job}} cluster have restarted at least 5 times in the last 10m.'
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/alertmanagerclustercrashlooping
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/alertmanager/alertmanagerclustercrashlooping
       summary: Half or more of the Alertmanager instances within the same cluster
         are crashlooping.
     expr: |
