--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/general.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/general.alerts.yaml
@@ -4,7 +4,7 @@
     annotations:
       description: '{{ printf "%.4g" $value }}% of the {{ $labels.job }}/{{ $labels.service
         }} targets in {{ $labels.namespace }} namespace are down.'
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/targetdown
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/general/targetdown
       summary: One or more targets are unreachable.
     expr: 100 * (count(up == 0) BY (job, namespace, service) / count(up) BY (job,
       namespace, service)) > 10
@@ -19,7 +19,7 @@
         and always fire against a receiver. There are integrations with various notification
         mechanisms that send a notification when this alert is not firing. For example the
         "DeadMansSnitch" integration in PagerDuty.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/watchdog
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/general/watchdog
       summary: An alert that should always be firing to certify that Alertmanager
         is working properly.
     expr: vector(1)
