--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kube-state-metrics.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kube-state-metrics.alerts.yaml
@@ -5,7 +5,7 @@
       description: kube-state-metrics is experiencing errors at an elevated rate in
         list operations. This is likely causing it to not be able to expose metrics
         about Kubernetes objects correctly or at all.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubestatemetricslisterrors
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kube-state-metrics/kubestatemetricslisterrors
       summary: kube-state-metrics is experiencing errors in list operations.
     expr: |
       (sum(rate(kube_state_metrics_list_total{job="kube-state-metrics",result="error"}[5m]))
@@ -20,7 +20,7 @@
       description: kube-state-metrics is experiencing errors at an elevated rate in
         watch operations. This is likely causing it to not be able to expose metrics
         about Kubernetes objects correctly or at all.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubestatemetricswatcherrors
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kube-state-metrics/kubestatemetricswatcherrors
       summary: kube-state-metrics is experiencing errors in watch operations.
     expr: |
       (sum(rate(kube_state_metrics_watch_total{job="kube-state-metrics",result="error"}[5m]))
@@ -35,7 +35,7 @@
       description: kube-state-metrics pods are running with different --total-shards
         configuration, some Kubernetes objects may be exposed multiple times or not
         exposed at all.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubestatemetricsshardingmismatch
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kube-state-metrics/kubestatemetricsshardingmismatch
       summary: kube-state-metrics sharding is misconfigured.
     expr: |
       stdvar (kube_state_metrics_total_shards{job="kube-state-metrics"}) != 0
@@ -46,7 +46,7 @@
     annotations:
       description: kube-state-metrics shards are missing, some Kubernetes objects
         are not being exposed.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubestatemetricsshardsmissing
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kube-state-metrics/kubestatemetricsshardsmissing
       summary: kube-state-metrics shards are missing.
     expr: |
       2^max(kube_state_metrics_total_shards{job="kube-state-metrics"}) - 1
