--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
@@ -4,7 +4,7 @@
     annotations:
       description: Pod {{ $labels.namespace }}/{{ $labels.pod }} ({{ $labels.container
         }}) is restarting {{ printf "%.2f" $value }} times / 10 minutes.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubepodcrashlooping
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubepodcrashlooping
       summary: Pod is crash looping.
     expr: |
       increase(kube_pod_container_status_restarts_total{job="kube-state-metrics"}[10m]) > 0
@@ -17,7 +17,7 @@
     annotations:
       description: Pod {{ $labels.namespace }}/{{ $labels.pod }} has been in a non-ready
         state for longer than 15 minutes.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubepodnotready
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubepodnotready
       summary: Pod has been in a non-ready state for more than 15 minutes.
     expr: |
       sum by (namespace, pod) (
@@ -35,7 +35,7 @@
       description: Deployment generation for {{ $labels.namespace }}/{{ $labels.deployment
         }} does not match, this indicates that the Deployment has failed but has not
         been rolled back.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubedeploymentgenerationmismatch
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubedeploymentgenerationmismatch
       summary: Deployment generation mismatch due to possible roll-back
     expr: |
       kube_deployment_status_observed_generation{job="kube-state-metrics"}
@@ -48,7 +48,7 @@
     annotations:
       description: Deployment {{ $labels.namespace }}/{{ $labels.deployment }} has
         not matched the expected number of replicas for longer than 15 minutes.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubedeploymentreplicasmismatch
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubedeploymentreplicasmismatch
       summary: Deployment has not matched the expected number of replicas.
     expr: |
       (
@@ -67,7 +67,7 @@
     annotations:
       description: StatefulSet {{ $labels.namespace }}/{{ $labels.statefulset }} has
         not matched the expected number of replicas for longer than 15 minutes.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubestatefulsetreplicasmismatch
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubestatefulsetreplicasmismatch
       summary: Deployment has not matched the expected number of replicas.
     expr: |
       (
@@ -87,7 +87,7 @@
       description: StatefulSet generation for {{ $labels.namespace }}/{{ $labels.statefulset
         }} does not match, this indicates that the StatefulSet has failed but has
         not been rolled back.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubestatefulsetgenerationmismatch
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubestatefulsetgenerationmismatch
       summary: StatefulSet generation mismatch due to possible roll-back
     expr: |
       kube_statefulset_status_observed_generation{job="kube-state-metrics"}
@@ -100,7 +100,7 @@
     annotations:
       description: StatefulSet {{ $labels.namespace }}/{{ $labels.statefulset }} update
         has not been rolled out.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubestatefulsetupdatenotrolledout
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubestatefulsetupdatenotrolledout
       summary: StatefulSet update has not been rolled out.
     expr: |
       (
@@ -127,7 +127,7 @@
     annotations:
       description: DaemonSet {{ $labels.namespace }}/{{ $labels.daemonset }} has not
         finished or progressed for at least 15 minutes.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubedaemonsetrolloutstuck
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubedaemonsetrolloutstuck
       summary: DaemonSet rollout is stuck.
     expr: |
       (
@@ -160,7 +160,7 @@
     annotations:
       description: Pod {{ $labels.namespace }}/{{ $labels.pod }} container {{ $labels.container}}
         has been in waiting state for longer than 1 hour.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubecontainerwaiting
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubecontainerwaiting
       summary: Pod container waiting longer than 1 hour
     expr: |
       sum by (namespace, pod, container) (kube_pod_container_status_waiting_reason{job="kube-state-metrics"}) > 0
@@ -171,7 +171,7 @@
     annotations:
       description: '{{ $value }} Pods of DaemonSet {{ $labels.namespace }}/{{ $labels.daemonset
         }} are not scheduled.'
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubedaemonsetnotscheduled
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubedaemonsetnotscheduled
       summary: DaemonSet pods are not scheduled.
     expr: |
       kube_daemonset_status_desired_number_scheduled{job="kube-state-metrics"}
@@ -184,7 +184,7 @@
     annotations:
       description: '{{ $value }} Pods of DaemonSet {{ $labels.namespace }}/{{ $labels.daemonset
         }} are running where they are not supposed to run.'
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubedaemonsetmisscheduled
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubedaemonsetmisscheduled
       summary: DaemonSet pods are misscheduled.
     expr: |
       kube_daemonset_status_number_misscheduled{job="kube-state-metrics"} > 0
@@ -195,7 +195,7 @@
     annotations:
       description: Job {{ $labels.namespace }}/{{ $labels.job_name }} is taking more
         than 12 hours to complete.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubejobcompletion
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubejobcompletion
       summary: Job did not complete in time
     expr: |
       kube_job_spec_completions{job="kube-state-metrics"} - kube_job_status_succeeded{job="kube-state-metrics"}  > 0
@@ -206,7 +206,7 @@
     annotations:
       description: Job {{ $labels.namespace }}/{{ $labels.job_name }} failed to complete.
         Removing failed job after investigation should clear this alert.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubejobfailed
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubejobfailed
       summary: Job failed to complete.
     expr: |
       kube_job_failed{job="kube-state-metrics"}  > 0
@@ -217,7 +217,7 @@
     annotations:
       description: HPA {{ $labels.namespace }}/{{ $labels.horizontalpodautoscaler  }}
         has not matched the desired number of replicas for longer than 15 minutes.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubehpareplicasmismatch
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubehpareplicasmismatch
       summary: HPA has not matched descired number of replicas.
     expr: |
       (kube_horizontalpodautoscaler_status_desired_replicas{job="kube-state-metrics"}
@@ -240,7 +240,7 @@
     annotations:
       description: HPA {{ $labels.namespace }}/{{ $labels.horizontalpodautoscaler  }}
         has been running at max replicas for longer than 15 minutes.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubehpamaxedout
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubehpamaxedout
       summary: HPA is running at max replicas
     expr: |
       kube_horizontalpodautoscaler_status_current_replicas{job="kube-state-metrics"}
