--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-resources.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-resources.alerts.yaml
@@ -4,7 +4,7 @@
     annotations:
       description: Cluster has overcommitted CPU resource requests for Pods and cannot
         tolerate node failure.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubecpuovercommit
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubecpuovercommit
       summary: Cluster has overcommitted CPU resource requests.
     expr: |
       sum(namespace_cpu:kube_pod_container_resource_requests:sum{})
@@ -19,7 +19,7 @@
     annotations:
       description: Cluster has overcommitted memory resource requests for Pods and
         cannot tolerate node failure.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubememoryovercommit
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubememoryovercommit
       summary: Cluster has overcommitted memory resource requests.
     expr: |
       sum(namespace_memory:kube_pod_container_resource_requests:sum{})
@@ -35,7 +35,7 @@
   - alert: KubeCPUQuotaOvercommit
     annotations:
       description: Cluster has overcommitted CPU resource requests for Namespaces.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubecpuquotaovercommit
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubecpuquotaovercommit
       summary: Cluster has overcommitted CPU resource requests.
     expr: |
       sum(kube_resourcequota{job="kube-state-metrics", type="hard", resource="cpu"})
@@ -48,7 +48,7 @@
   - alert: KubeMemoryQuotaOvercommit
     annotations:
       description: Cluster has overcommitted memory resource requests for Namespaces.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubememoryquotaovercommit
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubememoryquotaovercommit
       summary: Cluster has overcommitted memory resource requests.
     expr: |
       sum(kube_resourcequota{job="kube-state-metrics", type="hard", resource="memory"})
@@ -62,7 +62,7 @@
     annotations:
       description: Namespace {{ $labels.namespace }} is using {{ $value | humanizePercentage
         }} of its {{ $labels.resource }} quota.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubequotaalmostfull
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubequotaalmostfull
       summary: Namespace quota is going to be full.
     expr: |
       kube_resourcequota{job="kube-state-metrics", type="used"}
@@ -76,7 +76,7 @@
     annotations:
       description: Namespace {{ $labels.namespace }} is using {{ $value | humanizePercentage
         }} of its {{ $labels.resource }} quota.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubequotafullyused
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubequotafullyused
       summary: Namespace quota is fully used.
     expr: |
       kube_resourcequota{job="kube-state-metrics", type="used"}
@@ -90,7 +90,7 @@
     annotations:
       description: Namespace {{ $labels.namespace }} is using {{ $value | humanizePercentage
         }} of its {{ $labels.resource }} quota.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubequotaexceeded
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubequotaexceeded
       summary: Namespace quota has exceeded the limits.
     expr: |
       kube_resourcequota{job="kube-state-metrics", type="used"}
@@ -105,7 +105,7 @@
       description: '{{ $value | humanizePercentage }} throttling of CPU in namespace
         {{ $labels.namespace }} for container {{ $labels.container }} in pod {{ $labels.pod
         }}.'
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/cputhrottlinghigh
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/cputhrottlinghigh
       summary: Processes experience elevated CPU throttling.
     expr: |
       sum(increase(container_cpu_cfs_throttled_periods_total{container!="", namespace !~ "monitoring-.*(exporter|metrics)", container != "prometheus-config-reloader"}[5m])) by (container, pod, namespace)
