--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
@@ -5,7 +5,7 @@
       description: The PersistentVolume claimed by {{ $labels.persistentvolumeclaim
         }} in Namespace {{ $labels.namespace }} is only {{ $value | humanizePercentage
         }} free.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubepersistentvolumefillingup
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubepersistentvolumefillingup
       summary: PersistentVolume is filling up.
     expr: |
       (
@@ -23,7 +23,7 @@
       description: Based on recent sampling, the PersistentVolume claimed by {{ $labels.persistentvolumeclaim
         }} in Namespace {{ $labels.namespace }} is expected to fill up within four
         days. Currently {{ $value | humanizePercentage }} is available.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubepersistentvolumefillingup
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubepersistentvolumefillingup
       summary: PersistentVolume is filling up.
     expr: |
       (
@@ -42,7 +42,7 @@
     annotations:
       description: The persistent volume {{ $labels.persistentvolume }} has status
         {{ $labels.phase }}.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubepersistentvolumeerrors
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubepersistentvolumeerrors
       summary: PersistentVolume is having issues with provisioning.
     expr: |
       kube_persistentvolume_status_phase{phase=~"Failed|Pending",job="kube-state-metrics"} > 0
