--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system-apiserver.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system-apiserver.alerts.yaml
@@ -4,7 +4,7 @@
     annotations:
       description: A client certificate used to authenticate to the apiserver is expiring
         in less than 7.0 days.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubeclientcertificateexpiration
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubeclientcertificateexpiration
       summary: Client certificate is about to expire.
     expr: |
       apiserver_client_certificate_expiration_seconds_count{job="apiserver"} > 0 and on(job) histogram_quantile(0.01, sum by (job, le) (rate(apiserver_client_certificate_expiration_seconds_bucket{job="apiserver"}[5m]))) < 604800
@@ -14,7 +14,7 @@
     annotations:
       description: A client certificate used to authenticate to the apiserver is expiring
         in less than 24.0 hours.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubeclientcertificateexpiration
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubeclientcertificateexpiration
       summary: Client certificate is about to expire.
     expr: |
       apiserver_client_certificate_expiration_seconds_count{job="apiserver"} > 0 and on(job) histogram_quantile(0.01, sum by (job, le) (rate(apiserver_client_certificate_expiration_seconds_bucket{job="apiserver"}[5m]))) < 86400
@@ -25,7 +25,7 @@
       description: An aggregated API {{ $labels.name }}/{{ $labels.namespace }} has
         reported errors. It has appeared unavailable {{ $value | humanize }} times
         averaged over the past 10m.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/aggregatedapierrors
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/aggregatedapierrors
       summary: An aggregated API has reported errors.
     expr: |
       sum by(name, namespace)(increase(aggregator_unavailable_apiservice_total[10m])) > 4
@@ -35,7 +35,7 @@
     annotations:
       description: An aggregated API {{ $labels.name }}/{{ $labels.namespace }} has
         been only {{ $value | humanize }}% available over the last 10m.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/aggregatedapidown
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/aggregatedapidown
       summary: An aggregated API is down.
     expr: |
       (1 - max by(name, namespace)(avg_over_time(aggregator_unavailable_apiservice[10m]))) * 100 < 85
@@ -45,7 +45,7 @@
   - alert: KubeAPIDown
     annotations:
       description: KubeAPI has disappeared from Prometheus target discovery.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubeapidown
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubeapidown
       summary: Target disappeared from Prometheus target discovery.
     expr: |
       absent(up{job="apiserver"} == 1)
@@ -56,7 +56,7 @@
     annotations:
       description: The apiserver has terminated {{ $value | humanizePercentage }}
         of its incoming requests.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubeapiterminatedrequests
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubeapiterminatedrequests
       summary: The apiserver has terminated {{ $value | humanizePercentage }} of its
         incoming requests.
     expr: |
