--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/node-exporter.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/node-exporter.alerts.yaml
@@ -4,7 +4,7 @@
     annotations:
       description: Filesystem on {{ $labels.device }} at {{ $labels.instance }} has
         only {{ printf "%.2f" $value }}% available space left and is filling up.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodefilesystemspacefillingup
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodefilesystemspacefillingup
       summary: Filesystem is predicted to run out of space within the next 24 hours.
     expr: |
       (
@@ -21,7 +21,7 @@
     annotations:
       description: Filesystem on {{ $labels.device }} at {{ $labels.instance }} has
         only {{ printf "%.2f" $value }}% available space left and is filling up fast.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodefilesystemspacefillingup
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodefilesystemspacefillingup
       summary: Filesystem is predicted to run out of space within the next 4 hours.
     expr: |
       (
@@ -38,7 +38,7 @@
     annotations:
       description: Filesystem on {{ $labels.device }} at {{ $labels.instance }} has
         only {{ printf "%.2f" $value }}% available space left.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodefilesystemalmostoutofspace
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodefilesystemalmostoutofspace
       summary: Filesystem has less than 5% space left.
     expr: |
       (
@@ -53,7 +53,7 @@
     annotations:
       description: Filesystem on {{ $labels.device }} at {{ $labels.instance }} has
         only {{ printf "%.2f" $value }}% available space left.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodefilesystemalmostoutofspace
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodefilesystemalmostoutofspace
       summary: Filesystem has less than 3% space left.
     expr: |
       (
@@ -68,7 +68,7 @@
     annotations:
       description: Filesystem on {{ $labels.device }} at {{ $labels.instance }} has
         only {{ printf "%.2f" $value }}% available inodes left and is filling up.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodefilesystemfilesfillingup
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodefilesystemfilesfillingup
       summary: Filesystem is predicted to run out of inodes within the next 24 hours.
     expr: |
       (
@@ -85,7 +85,7 @@
     annotations:
       description: Filesystem on {{ $labels.device }} at {{ $labels.instance }} has
         only {{ printf "%.2f" $value }}% available inodes left and is filling up fast.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodefilesystemfilesfillingup
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodefilesystemfilesfillingup
       summary: Filesystem is predicted to run out of inodes within the next 4 hours.
     expr: |
       (
@@ -102,7 +102,7 @@
     annotations:
       description: Filesystem on {{ $labels.device }} at {{ $labels.instance }} has
         only {{ printf "%.2f" $value }}% available inodes left.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodefilesystemalmostoutoffiles
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodefilesystemalmostoutoffiles
       summary: Filesystem has less than 5% inodes left.
     expr: |
       (
@@ -117,7 +117,7 @@
     annotations:
       description: Filesystem on {{ $labels.device }} at {{ $labels.instance }} has
         only {{ printf "%.2f" $value }}% available inodes left.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodefilesystemalmostoutoffiles
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodefilesystemalmostoutoffiles
       summary: Filesystem has less than 3% inodes left.
     expr: |
       (
@@ -132,7 +132,7 @@
     annotations:
       description: '{{ $labels.instance }} interface {{ $labels.device }} has encountered
         {{ printf "%.0f" $value }} receive errors in the last two minutes.'
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodenetworkreceiveerrs
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodenetworkreceiveerrs
       summary: Network interface is reporting many receive errors.
     expr: |
       rate(node_network_receive_errs_total[2m]) / rate(node_network_receive_packets_total[2m]) > 0.01
@@ -143,7 +143,7 @@
     annotations:
       description: '{{ $labels.instance }} interface {{ $labels.device }} has encountered
         {{ printf "%.0f" $value }} transmit errors in the last two minutes.'
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodenetworktransmiterrs
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodenetworktransmiterrs
       summary: Network interface is reporting many transmit errors.
     expr: |
       rate(node_network_transmit_errs_total[2m]) / rate(node_network_transmit_packets_total[2m]) > 0.01
@@ -153,7 +153,7 @@
   - alert: NodeHighNumberConntrackEntriesUsed
     annotations:
       description: '{{ $value | humanizePercentage }} of conntrack entries are used.'
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodehighnumberconntrackentriesused
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodehighnumberconntrackentriesused
       summary: Number of conntrack are getting close to the limit.
     expr: |
       (node_nf_conntrack_entries / node_nf_conntrack_entries_limit) > 0.75
@@ -162,7 +162,7 @@
   - alert: NodeTextFileCollectorScrapeError
     annotations:
       description: Node Exporter text file collector failed to scrape.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodetextfilecollectorscrapeerror
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodetextfilecollectorscrapeerror
       summary: Node Exporter text file collector failed to scrape.
     expr: |
       node_textfile_scrape_error{job="node-exporter"} == 1
@@ -172,7 +172,7 @@
     annotations:
       description: Clock on {{ $labels.instance }} is out of sync by more than 300s.
         Ensure NTP is configured correctly on this host.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodeclockskewdetected
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodeclockskewdetected
       summary: Clock skew detected.
     expr: |
       (
@@ -193,7 +193,7 @@
     annotations:
       description: Clock on {{ $labels.instance }} is not synchronising. Ensure NTP
         is configured on this host.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodeclocknotsynchronising
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodeclocknotsynchronising
       summary: Clock not synchronising.
     expr: |
       min_over_time(node_timex_sync_status[5m]) == 0
@@ -207,7 +207,7 @@
       description: RAID array '{{ $labels.device }}' on {{ $labels.instance }} is
         in degraded state due to one or more disks failures. Number of spare drives
         is insufficient to fix issue automatically.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/noderaiddegraded
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/noderaiddegraded
       summary: RAID Array is degraded
     expr: |
       node_md_disks_required - ignoring (state) (node_md_disks{state="active"}) > 0
@@ -218,9 +218,35 @@
     annotations:
       description: At least one device in RAID array on {{ $labels.instance }} failed.
         Array '{{ $labels.device }}' needs attention and possibly a disk swap.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/noderaiddiskfailure
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/noderaiddiskfailure
       summary: Failed device in RAID array
     expr: |
       node_md_disks{state="failed"} > 0
     labels:
       severity: warning
+  - alert: NodeFileDescriptorLimit
+    annotations:
+      description: File descriptors limit at {{ $labels.instance }} is currently at
+        {{ printf "%.2f" $value }}%.
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodefiledescriptorlimit
+      summary: Kernel is predicted to exhaust file descriptors limit soon.
+    expr: |
+      (
+        node_filefd_allocated{job="node-exporter"} * 100 / node_filefd_maximum{job="node-exporter"} > 70
+      )
+    for: 15m
+    labels:
+      severity: warning
+  - alert: NodeFileDescriptorLimit
+    annotations:
+      description: File descriptors limit at {{ $labels.instance }} is currently at
+        {{ printf "%.2f" $value }}%.
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/node/nodefiledescriptorlimit
+      summary: Kernel is predicted to exhaust file descriptors limit soon.
+    expr: |
+      (
+        node_filefd_allocated{job="node-exporter"} * 100 / node_filefd_maximum{job="node-exporter"} > 90
+      )
+    for: 15m
+    labels:
+      severity: critical
