--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/node-network.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/node-network.alerts.yaml
@@ -2,9 +2,10 @@
   rules:
   - alert: NodeNetworkInterfaceFlapping
     annotations:
-      message: Network interface "{{ $labels.device }}" changing it's up status often
-        on node-exporter {{ $labels.namespace }}/{{ $labels.pod }}
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/nodenetworkinterfaceflapping
+      description: Network interface "{{ $labels.device }}" changing its up status
+        often on node-exporter {{ $labels.namespace }}/{{ $labels.pod }}
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/general/nodenetworkinterfaceflapping
+      summary: Network interface is often changing its status
     expr: |
       changes(node_network_up{job="node-exporter",device!~"veth.+"}[2m]) > 2
     for: 2m
