--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/prometheus-operator.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/prometheus-operator.alerts.yaml
@@ -4,7 +4,7 @@
     annotations:
       description: Errors while performing List operations in controller {{$labels.controller}}
         in {{$labels.namespace}} namespace.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/prometheusoperatorlisterrors
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatorlisterrors
       summary: Errors while performing list operations in controller.
     expr: |
       (sum by (controller,namespace) (rate(prometheus_operator_list_operations_failed_total{job="prometheus-operator",namespace="monitoring"}[10m])) / sum by (controller,namespace) (rate(prometheus_operator_list_operations_total{job="prometheus-operator",namespace="monitoring"}[10m]))) > 0.4
@@ -15,7 +15,7 @@
     annotations:
       description: Errors while performing watch operations in controller {{$labels.controller}}
         in {{$labels.namespace}} namespace.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/prometheusoperatorwatcherrors
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatorwatcherrors
       summary: Errors while performing watch operations in controller.
     expr: |
       (sum by (controller,namespace) (rate(prometheus_operator_watch_operations_failed_total{job="prometheus-operator",namespace="monitoring"}[10m])) / sum by (controller,namespace) (rate(prometheus_operator_watch_operations_total{job="prometheus-operator",namespace="monitoring"}[10m]))) > 0.4
@@ -26,7 +26,7 @@
     annotations:
       description: Controller {{ $labels.controller }} in {{ $labels.namespace }}
         namespace fails to reconcile {{ $value }} objects.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/prometheusoperatorsyncfailed
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatorsyncfailed
       summary: Last controller reconciliation failed
     expr: |
       min_over_time(prometheus_operator_syncs{status="failed",job="prometheus-operator",namespace="monitoring"}[5m]) > 0
@@ -37,7 +37,7 @@
     annotations:
       description: '{{ $value | humanizePercentage }} of reconciling operations failed
         for {{ $labels.controller }} controller in {{ $labels.namespace }} namespace.'
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/prometheusoperatorreconcileerrors
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatorreconcileerrors
       summary: Errors while reconciling controller.
     expr: |
       (sum by (controller,namespace) (rate(prometheus_operator_reconcile_errors_total{job="prometheus-operator",namespace="monitoring"}[5m]))) / (sum by (controller,namespace) (rate(prometheus_operator_reconcile_operations_total{job="prometheus-operator",namespace="monitoring"}[5m]))) > 0.1
@@ -48,7 +48,7 @@
     annotations:
       description: Errors while reconciling Prometheus in {{ $labels.namespace }}
         Namespace.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/prometheusoperatornodelookuperrors
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatornodelookuperrors
       summary: Errors while reconciling Prometheus.
     expr: |
       rate(prometheus_operator_node_address_lookup_errors_total{job="prometheus-operator",namespace="monitoring"}[5m]) > 0.1
@@ -59,7 +59,7 @@
     annotations:
       description: Prometheus operator in {{ $labels.namespace }} namespace isn't
         ready to reconcile {{ $labels.controller }} resources.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/prometheusoperatornotready
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatornotready
       summary: Prometheus operator not ready
     expr: |
       min by(namespace, controller) (max_over_time(prometheus_operator_ready{job="prometheus-operator",namespace="monitoring"}[5m]) == 0)
@@ -71,7 +71,7 @@
       description: Prometheus operator in {{ $labels.namespace }} namespace rejected
         {{ printf "%0.0f" $value }} {{ $labels.controller }}/{{ $labels.resource }}
         resources.
-      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/prometheusoperatorrejectedresources
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/prometheus-operator/prometheusoperatorrejectedresources
       summary: Resources rejected by Prometheus operator
     expr: |
       min_over_time(prometheus_operator_managed_resources{state="rejected",job="prometheus-operator",namespace="monitoring"}[5m]) > 0
